config/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-ephemeral-ui
  namespace: argo-ephemeral-operator-system
  labels:
    app: argo-ephemeral-ui
    component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: argo-ephemeral-ui
  template:
    metadata:
      labels:
        app: argo-ephemeral-ui
    spec:
      containers:
      - name: nginx
        image: localhost/argo-ephemeral-ui:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: false
          capabilities:
            drop:
            - ALL
